# KSU-TowerNode

./: .gitignore  .gitmodules  README.md  marielscript_start.sh  pyproject.toml  run.py  run.sh  setup.py  setup.sh  stop.sh  venv_util.py
Codebase/CollectionBrain/: soil_manager.py  soil_mananager.py
Codebase/DataCollection/Brain/: soil_manager.py
Codebase/DataCollection/Connection/: soil_connection.py
Codebase/DataCollection/Data/: soil_sensing_data.py  soil_set.py
Codebase/DataCollection/Soil/: soil_connection.py  soil_manager.py  soil_set.py
Codebase/DataCollection/SoilSensing/: log_soil_data.py
Codebase/FileIO/: file_io_setup.py
Codebase/FileIO/CSV/: create_csv.py
Codebase/Generic_VENV_Manger/: .gitignore  README.md  packages.json  venv_util.py
Codebase/Generic_VENV_Manger/VENVSetup/: setup_run_env_file.py  (+1 more)
Codebase/Pathing/: get_brain_folder.py  get_csv_out_folder.py  get_file_io_folder.py  get_project_root.py
Codebase/Setup/: create_atmospheric_config.sh  create_csv_file.sh  create_global_config.sh  create_outfile.sh  create_sdr_config.sh  create_venv.sh
Codebase/SupportMethods/: get_current_date.py  get_current_time.py  get_date_time_formated.py  get_file_time.py
SDR/: reset_rtlsdr.sh
VENVCodeBase/VENVPathing/: get_venv_example_folder.py  get_venv_root.py
VENVCodeBase/VENVReadJSON/: load_env_vars.py
VENVCodeBase/VENVSupport/: ensure_venv_path.py  get_python_executable.py
VENVSetup/: setup_packages_file.py  setup_run_env_file.py
VENVSetup/VENVExampleJSON/: packages.example.json
generic_venv_manager/: load_env_vars.py  venv_util.py
(+5 files in other folders)
